--- a/index.html
+++ b/index.html
@@ -3,271 +3,302 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tes Karakter & Nilai Moral</title>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<title>Tes Karakter Warna</title>
 
 <style>
-*{box-sizing:border-box}
 body{
   margin:0;
-  font-family:"Comic Sans MS", Arial;
-  background:linear-gradient(135deg,#a5f3fc,#fde68a);
+  font-family:Inter,Segoe UI,sans-serif;
+  background:linear-gradient(135deg,#020617,#0f172a);
+  color:#e5e7eb;
   min-height:100vh;
   display:flex;
   justify-content:center;
   align-items:center;
-  padding:10px;
 }
-.app{
+.card{
   width:100%;
-  max-width:800px;
-  background:#fff;
-  padding:20px;
+  max-width:820px;
+  background:#020617cc;
+  backdrop-filter:blur(14px);
   border-radius:22px;
-  box-shadow:0 15px 30px rgba(0,0,0,.25);
+  padding:28px;
+  box-shadow:0 25px 50px #0007;
 }
-h1{text-align:center;color:#0ea5e9}
-.question{font-size:clamp(16px,4.5vw,20px);margin:15px 0}
-.option{
+.hidden{display:none}
+h1,h2{margin-top:0}
+button{
+  width:100%;
   padding:14px;
+  border:none;
+  border-radius:14px;
+  background:linear-gradient(135deg,#38bdf8,#6366f1);
+  color:#fff;
+  font-size:16px;
+  cursor:pointer;
+  margin-top:16px;
+}
+.option{
+  background:#020617aa;
+  padding:14px;
+  border-radius:14px;
   margin:10px 0;
-  border-radius:16px;
-  background:#e0f2fe;
+  border:1px solid #1e293b;
   cursor:pointer;
   transition:.2s;
 }
-.option:hover{background:#bae6fd;transform:scale(1.02)}
-.progress{height:10px;background:#e5e7eb;border-radius:10px;overflow:hidden}
-.bar{height:100%;background:#0ea5e9;width:0%}
-.section{margin-top:15px;padding:15px;border-radius:15px}
-.good{background:#dcfce7}
-.warn{background:#fee2e2}
-.info{background:#e0f2fe}
-button{
-  width:100%;
-  max-width:300px;
-  padding:14px;
-  border:none;
-  border-radius:20px;
-  cursor:pointer;
-  font-size:16px;
+.option:hover{
+  background:#1e293b;
+  transform:translateY(-2px);
 }
-.start{text-align:center}
-.start button{background:#4ade80}
-.music-btn{background:#38bdf8;color:white;margin-top:8px}
-canvas{max-width:100%}
+.badge{
+  padding:8px 16px;
+  border-radius:999px;
+  font-weight:700;
+  display:inline-block;
+  margin-bottom:12px;
+}
+.red{background:#ef4444}
+.yellow{background:#eab308;color:#000}
+.blue{background:#3b82f6}
+.green{background:#22c55e}
+.block{
+  background:#020617aa;
+  border-radius:16px;
+  padding:18px;
+  margin:14px 0;
+  border:1px solid #1e293b;
+}
 </style>
 </head>
 
 <body>
 
-<audio id="bgm" loop>
-  <source src="musik.mp3" type="audio/mpeg">
-</audio>
+<div class="card">
 
-<div class="app" id="app">
-  <h1>🧭 Tes Karakter & Nilai Moral</h1>
-  <div class="start">
-    <p>Jawablah sesuai yang paling mungkin kamu lakukan 😊</p>
-    <button onclick="startTest()">▶️ Mulai Tes</button>
-  </div>
+<!-- START -->
+<div id="start">
+<h1>Tes Karakter Warna</h1>
+<p>Tes ini mengungkap kecenderungan karakter melalui respon alami terhadap situasi sehari-hari.</p>
+<button onclick="start()">Mulai Tes</button>
+</div>
+
+<!-- QUIZ -->
+<div id="quiz" class="hidden">
+<h2 id="q"></h2>
+<div id="opts"></div>
+</div>
+
+<!-- RESULT -->
+<div id="result" class="hidden">
+<h2>Karakter Dominan Kamu</h2>
+<div id="summary"></div>
+<button onclick="showRelation()">Lihat Dampak Hubungan Antar Karakter →</button>
+</div>
+
+<!-- RELATION -->
+<div id="relation" class="hidden">
+<h2>Kesimpulan Hubungan Antar Karakter</h2>
+
+<div class="block"><b>🔴 Merah ↔ 🟡 Kuning</b>
+<p>Kuning lelah emosional, Merah dominan → hubungan satu arah, kreativitas mati.</p></div>
+
+<div class="block"><b>🔴 Merah ↔ 🔵 Biru</b>
+<p>Biru defensif, Merah anti-kritik → keputusan cepat tapi rapuh.</p></div>
+
+<div class="block"><b>🔴 Merah ↔ 🟢 Hijau</b>
+<p>Hijau terus mengalah → damai di luar, rapuh di dalam.</p></div>
+
+<div class="block"><b>🟡 Kuning ↔ 🔵 Biru</b>
+<p>Kuning minder, Biru kaku → ide mati, komunikasi beku.</p></div>
+
+<div class="block"><b>🟡 Kuning ↔ 🟢 Hijau</b>
+<p>Terlalu nyaman tanpa arah → hubungan hangat tapi stagnan.</p></div>
+
+<div class="block"><b>🔵 Biru ↔ 🟢 Hijau</b>
+<p>Takut salah & konflik → stabil tapi tidak maju.</p></div>
+
+<button onclick="location.reload()">Ulangi Tes</button>
+</div>
+
 </div>
 
 <script>
-const bgm=document.getElementById("bgm");
-function toggleMusic(){ bgm.paused?bgm.play():bgm.pause(); }
-
-const scores={
-  "Kejujuran":0,
-  "Tanggung Jawab":0,
-  "Disiplin":0,
-  "Amanah":0,
-  "Rasa Hormat":0,
-  "Empati":0,
-  "Keadilan":0,
-  "Kerendahan Hati":0,
-  "Keberanian Moral":0
-};
-
-const advice={
-  "Kejujuran":"Latih berkata sesuai fakta meski tidak mudah.",
-  "Tanggung Jawab":"Biasakan menyelesaikan tugas sampai tuntas.",
-  "Disiplin":"Buat jadwal dan patuhi aturan yang ada.",
-  "Amanah":"Latih menepati janji sekecil apa pun.",
-  "Rasa Hormat":"Biasakan mendengar dan menghargai pendapat orang.",
-  "Empati":"Coba pahami perasaan orang lain sebelum bertindak.",
-  "Keadilan":"Latih bersikap adil dan tidak memihak.",
-  "Kerendahan Hati":"Biasakan menerima kritik dan mengakui kesalahan.",
-  "Keberanian Moral":"Latih berani melakukan yang benar meski sulit."
-};
-
-let index=0;
+const scores={red:0,yellow:0,blue:0,green:0};
 
 const questions=[
-{q:"Jika kamu melakukan kesalahan kecil dan tidak ada yang tahu, kamu akan:",o:{
- A:["Membetulkannya diam-diam","Tanggung Jawab"],
- B:["Mengaku jika ditanya","Kejujuran"],
- C:["Berharap tidak diketahui","Disiplin"],
- D:["Mencari alasan","Kerendahan Hati"]
-}},
-{q:"Saat diberi tugas kelompok dan waktunya hampir habis:",o:{
- A:["Tetap menyelesaikan bagianmu","Amanah"],
- B:["Mengajak teman fokus","Kepemimpinan"],
- C:["Mengikuti aturan waktu","Disiplin"],
- D:["Menunggu instruksi","Rasa Hormat"]
-}},
-{q:"Jika dua teman bertengkar:",o:{
- A:["Mendengarkan keduanya","Keadilan"],
- B:["Menenangkan mereka","Empati"],
- C:["Memihak yang dekat","Rasa Hormat"],
- D:["Menghindari masalah","Kerendahan Hati"]
-}},
-{q:"Saat janji tidak bisa ditepati:",o:{
- A:["Memberi tahu lebih awal","Amanah"],
- B:["Mencari pengganti","Tanggung Jawab"],
- C:["Diam saja","Kejujuran"],
- D:["Menunda tanpa kabar","Disiplin"]
-}},
-{q:"Jika teman melakukan kesalahan di depan umum:",o:{
- A:["Menegurnya secara pribadi","Rasa Hormat"],
- B:["Membelanya","Empati"],
- C:["Membiarkannya","Kerendahan Hati"],
- D:["Mengatakan yang benar","Keberanian Moral"]
-}},
-{q:"Ketika aturan terasa tidak adil:",o:{
- A:["Tetap mematuhinya","Disiplin"],
- B:["Menyampaikan dengan sopan","Keberanian Moral"],
- C:["Mengajak diskusi","Keadilan"],
- D:["Mengikuti arus","Kerendahan Hati"]
-}},
-{q:"Jika mendapatkan pujian:",o:{
- A:["Berterima kasih","Rasa Hormat"],
- B:["Mengakui bantuan orang lain","Kerendahan Hati"],
- C:["Bangga sendiri","Kejujuran"],
- D:["Diam saja","Empati"]
-}},
-{q:"Saat melihat barang bukan milikmu tertinggal:",o:{
- A:["Mengembalikan","Kejujuran"],
- B:["Menitipkan ke pihak berwenang","Amanah"],
- C:["Mencari pemiliknya","Tanggung Jawab"],
- D:["Membiarkannya","Kerendahan Hati"]
-}},
-{q:"Jika diminta memilih dalam kelompok:",o:{
- A:["Memilih yang paling adil","Keadilan"],
- B:["Memikirkan perasaan semua","Empati"],
- C:["Mengikuti keputusan bersama","Rasa Hormat"],
- D:["Menghindari memilih","Kerendahan Hati"]
-}},
-{q:"Saat berbeda pendapat dengan mayoritas:",o:{
- A:["Menyampaikan dengan sopan","Keberanian Moral"],
- B:["Mengalah","Rasa Hormat"],
- C:["Diam","Kerendahan Hati"],
- D:["Mencari jalan tengah","Keadilan"]
-}},
-{q:"Jika tugas terasa berat:",o:{
- A:["Menyicil sedikit demi sedikit","Disiplin"],
- B:["Meminta bantuan","Empati"],
- C:["Tetap mengerjakan","Tanggung Jawab"],
- D:["Menunda","Kerendahan Hati"]
-}},
-{q:"Saat dipercaya memegang sesuatu:",o:{
- A:["Menjaganya baik-baik","Amanah"],
- B:["Melaporkan kondisinya","Kejujuran"],
- C:["Mengikuti aturan","Disiplin"],
- D:["Menyerahkannya ke orang lain","Rasa Hormat"]
-}},
-{q:"Jika melihat ketidakadilan kecil:",o:{
- A:["Mengingatkan dengan baik","Keberanian Moral"],
- B:["Membela yang dirugikan","Empati"],
- C:["Mengajak bicara","Keadilan"],
- D:["Diam","Kerendahan Hati"]
-}},
-{q:"Saat membuat kesalahan:",o:{
- A:["Mengaku","Kejujuran"],
- B:["Memperbaiki","Tanggung Jawab"],
- C:["Menerima kritik","Kerendahan Hati"],
- D:["Mengikuti aturan","Disiplin"]
-}},
-{q:"Jika diminta pendapat:",o:{
- A:["Jujur tapi sopan","Kejujuran"],
- B:["Memikirkan dampaknya","Empati"],
- C:["Mengikuti norma","Rasa Hormat"],
- D:["Menyampaikan meski berbeda","Keberanian Moral"]
-}},
-{q:"Saat bekerja dengan orang baru:",o:{
- A:["Menghargai kebiasaannya","Rasa Hormat"],
- B:["Mendengarkan dulu","Empati"],
- C:["Menepati kesepakatan","Amanah"],
- D:["Mengikuti aturan","Disiplin"]
-}},
-{q:"Jika ada kesalahpahaman:",o:{
- A:["Meluruskan fakta","Kejujuran"],
- B:["Mencari solusi","Tanggung Jawab"],
- C:["Menjaga perasaan","Empati"],
- D:["Menyampaikan yang benar","Keberanian Moral"]
-}},
-{q:"Saat mendapat amanah besar:",o:{
- A:["Berhati-hati","Amanah"],
- B:["Menyusun rencana","Disiplin"],
- C:["Bertanya jika ragu","Kerendahan Hati"],
- D:["Melaksanakannya","Tanggung Jawab"]
-}},
-{q:"Jika aturan dilanggar orang lain:",o:{
- A:["Mengingatkan dengan sopan","Rasa Hormat"],
- B:["Melaporkan jika perlu","Keberanian Moral"],
- C:["Menilai secara adil","Keadilan"],
- D:["Menasehati","Empati"]
-}},
-{q:"Jika pendapatmu salah:",o:{
- A:["Mengaku dan belajar","Kerendahan Hati"],
- B:["Memperbaiki","Tanggung Jawab"],
- C:["Menerima masukan","Rasa Hormat"],
- D:["Tetap jujur","Kejujuran"]
-}}
+{q:"Saat berada di tempat baru tanpa arahan jelas, hal pertama yang biasanya kamu lakukan:",a:[
+{t:"Mengamati situasi sebelum bertindak",c:"blue"},
+{t:"Mencari interaksi agar suasana terasa hidup",c:"red"},
+{t:"Menyesuaikan diri dengan lingkungan",c:"green"},
+{t:"Mulai menentukan langkah yang perlu dilakukan",c:"yellow"}
+]},
+{q:"Jika rencana yang kamu siapkan berubah tiba-tiba:",a:[
+{t:"Menganggapnya sebagai tantangan menarik",c:"red"},
+{t:"Menentukan rencana baru secepatnya",c:"yellow"},
+{t:"Memikirkan dampaknya secara menyeluruh",c:"blue"},
+{t:"Menerima perubahan sambil menenangkan situasi",c:"green"}
+]},
+{q:"Dalam diskusi panjang yang alot:",a:[
+{t:"Berusaha menjaga suasana tetap ringan",c:"red"},
+{t:"Mengarahkannya agar cepat selesai",c:"yellow"},
+{t:"Memastikan argumen tetap logis",c:"blue"},
+{t:"Memberi ruang agar semua merasa nyaman",c:"green"}
+]},
+{q:"Jika terjadi kesalahan dalam tim:",a:[
+{t:"Mengajak semua tetap optimis",c:"red"},
+{t:"Langsung fokus pada solusi",c:"yellow"},
+{t:"Mencari penyebab secara detail",c:"blue"},
+{t:"Menjaga agar tidak saling menyalahkan",c:"green"}
+]},
+{q:"Saat bekerja di bawah tekanan waktu:",a:[
+{t:"Tetap bersemangat meski terburu-buru",c:"red"},
+{t:"Mendorong penyelesaian secepat mungkin",c:"yellow"},
+{t:"Takut jika hasil tidak sempurna",c:"blue"},
+{t:"Menjaga kestabilan tim",c:"green"}
+]},
+{q:"Jika pendapatmu berbeda dengan mayoritas:",a:[
+{t:"Menyampaikannya dengan cara santai",c:"red"},
+{t:"Tetap bertahan pada pendirian",c:"yellow"},
+{t:"Menjelaskan dengan data pendukung",c:"blue"},
+{t:"Lebih memilih mengalah",c:"green"}
+]},
+{q:"Dalam situasi tidak pasti:",a:[
+{t:"Mengikuti intuisi pribadi",c:"red"},
+{t:"Mengambil keputusan agar ada arah",c:"yellow"},
+{t:"Menunggu informasi lengkap",c:"blue"},
+{t:"Menyesuaikan dengan kondisi sekitar",c:"green"}
+]},
+{q:"Jika seseorang mengkritik hasil kerjamu:",a:[
+{t:"Tidak terlalu memikirkannya",c:"red"},
+{t:"Menganggapnya sebagai tantangan",c:"yellow"},
+{t:"Mengevaluasi dengan serius",c:"blue"},
+{t:"Menerima tanpa memperpanjang masalah",c:"green"}
+]},
+{q:"Saat harus bekerja bersama orang baru:",a:[
+{t:"Mencairkan suasana terlebih dahulu",c:"red"},
+{t:"Menentukan pembagian peran",c:"yellow"},
+{t:"Mengamati cara kerja mereka",c:"blue"},
+{t:"Menyesuaikan ritme kerja",c:"green"}
+]},
+{q:"Jika suasana kerja mulai tegang:",a:[
+{t:"Mencoba mencairkan suasana",c:"red"},
+{t:"Menghadapi masalah secara langsung",c:"yellow"},
+{t:"Menarik diri untuk berpikir",c:"blue"},
+{t:"Menjaga agar tetap damai",c:"green"}
+]},
+{q:"Saat menghadapi perubahan besar:",a:[
+{t:"Merasa antusias",c:"red"},
+{t:"Melihat peluang di dalamnya",c:"yellow"},
+{t:"Merasa perlu persiapan matang",c:"blue"},
+{t:"Mencari kestabilan",c:"green"}
+]},
+{q:"Jika harus mengambil keputusan cepat:",a:[
+{t:"Mengikuti perasaan saat itu",c:"red"},
+{t:"Langsung memutuskan",c:"yellow"},
+{t:"Berpikir sejenak",c:"blue"},
+{t:"Mempertimbangkan dampaknya ke orang lain",c:"green"}
+]},
+{q:"Dalam pekerjaan jangka panjang:",a:[
+{t:"Mencari variasi agar tidak bosan",c:"red"},
+{t:"Fokus pada hasil akhir",c:"yellow"},
+{t:"Menjaga konsistensi kualitas",c:"blue"},
+{t:"Menjaga suasana tetap nyaman",c:"green"}
+]},
+{q:"Jika target terasa terlalu berat:",a:[
+{t:"Menyemangati diri sendiri",c:"red"},
+{t:"Mendorong diri untuk tetap maju",c:"yellow"},
+{t:"Menganalisis ulang strategi",c:"blue"},
+{t:"Menjaga ritme agar tidak stres",c:"green"}
+]},
+{q:"Saat berada dalam tim besar:",a:[
+{t:"Menjadi penghubung antar anggota",c:"red"},
+{t:"Mengambil peran pengarah",c:"yellow"},
+{t:"Menjadi pengamat sistem kerja",c:"blue"},
+{t:"Menjadi penyeimbang",c:"green"}
+]},
+{q:"Jika situasi berjalan tidak sesuai rencana:",a:[
+{t:"Menikmati ketidakpastian",c:"red"},
+{t:"Mengubah arah dengan cepat",c:"yellow"},
+{t:"Merasa terganggu",c:"blue"},
+{t:"Menerima dengan tenang",c:"green"}
+]},
+{q:"Saat harus menyampaikan pendapat sulit:",a:[
+{t:"Menyampaikannya dengan humor",c:"red"},
+{t:"Menyampaikannya secara tegas",c:"yellow"},
+{t:"Menyusunnya dengan hati-hati",c:"blue"},
+{t:"Memilih kata agar tidak melukai",c:"green"}
+]},
+{q:"Jika menghadapi risiko:",a:[
+{t:"Mencobanya terlebih dulu",c:"red"},
+{t:"Mengambil peluang",c:"yellow"},
+{t:"Menghitung risiko",c:"blue"},
+{t:"Menghindarinya",c:"green"}
+]},
+{q:"Dalam kondisi serba cepat:",a:[
+{t:"Mengikuti alurnya",c:"red"},
+{t:"Mengendalikan arah",c:"yellow"},
+{t:"Merasa kurang nyaman",c:"blue"},
+{t:"Menjaga agar tetap stabil",c:"green"}
+]},
+{q:"Hal yang paling kamu butuhkan saat bekerja:",a:[
+{t:"Kebebasan berekspresi",c:"red"},
+{t:"Kejelasan target",c:"yellow"},
+{t:"Struktur yang rapi",c:"blue"},
+{t:"Lingkungan harmonis",c:"green"}
+]}
 ];
 
-// random
+// acak urutan soal
 questions.sort(()=>Math.random()-0.5);
 
-function startTest(){
-  bgm.volume=0.4;
-  bgm.play();
-  index=0;
-  loadQuestion();
+let i=0;
+
+function start(){
+document.getElementById("start").classList.add("hidden");
+document.getElementById("quiz").classList.remove("hidden");
+load();
 }
 
-function loadQuestion(){
-  app.innerHTML=`
-    <h1>🧭 Tes Karakter & Nilai Moral</h1>
-    <div class="question">${index+1}. ${questions[index].q}</div>
-    <div id="options"></div>
-    <div class="progress"><div class="bar" style="width:${index/questions.length*100}%"></div></div>
-    <button class="music-btn" onclick="toggleMusic()">🔊 Musik ON / OFF</button>
-  `;
-  const opt=document.getElementById("options");
-  for(let k in questions[index].o){
-    const d=document.createElement("div");
-    d.className="option";
-    d.innerText=k+". "+questions[index].o[k][0];
-    d.onclick=()=>{scores[questions[index].o[k][1]]++;index++;index<questions.length?loadQuestion():showResult();}
-    opt.appendChild(d);
-  }
+function load(){
+const q=questions[i];
+document.getElementById("q").innerText=`${i+1}. ${q.q}`;
+const box=document.getElementById("opts");
+box.innerHTML="";
+q.a.sort(()=>Math.random()-0.5).forEach(o=>{
+const d=document.createElement("div");
+d.className="option";
+d.innerText=o.t;
+d.onclick=()=>{
+scores[o.c]++;
+i++;
+i<questions.length?load():showResult();
+};
+box.appendChild(d);
+});
 }
 
 function showResult(){
-  const sorted=Object.entries(scores).sort((a,b)=>b[1]-a[1]);
-  app.innerHTML=`
-    <h1>📊 Hasil Tes Karakter</h1>
-    <canvas id="chart"></canvas>
-    <div class="section good">⭐ <b>Kekuatan Karakter:</b><br>${sorted[0][0]}</div>
-    <div class="section warn">⚠️ <b>Perlu Dikembangkan:</b><br>${sorted[sorted.length-1][0]}</div>
-    <div class="section info">🛠️ <b>Saran:</b><br>${advice[sorted[sorted.length-1][0]]}</div>
-  `;
-  new Chart(chart,{
-    type:"radar",
-    data:{labels:Object.keys(scores),datasets:[{data:Object.values(scores),backgroundColor:"rgba(14,165,233,.4)",borderColor:"#0ea5e9"}]},
-    options:{scales:{r:{beginAtZero:true,max:5}}}
-  });
+document.getElementById("quiz").classList.add("hidden");
+document.getElementById("result").classList.remove("hidden");
+
+const dominant=Object.keys(scores).reduce((a,b)=>scores[a]>scores[b]?a:b);
+const map={
+red:["Sanguinis","red","Ekspresif, antusias, komunikatif","Cenderung impulsif"],
+yellow:["Koleris","yellow","Tegas, berorientasi hasil","Bisa dominan"],
+blue:["Melankolis","blue","Analitis, teliti","Perfeksionis"],
+green:["Plegmatis","green","Tenang, empatik","Cenderung pasif"]
+};
+const d=map[dominant];
+document.getElementById("summary").innerHTML=`
+<span class="badge ${d[1]}">${d[0]}</span>
+<p><b>Kelebihan:</b> ${d[2]}</p>
+<p><b>Kekurangan:</b> ${d[3]}</p>`;
+}
+
+function showRelation(){
+document.getElementById("result").classList.add("hidden");
+document.getElementById("relation").classList.remove("hidden");
 }
 </script>
 
